[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/fly/0005.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/fly/0011.png" type="Texture" id=3]
[ext_resource path="res://assets/fly/0015.png" type="Texture" id=4]
[ext_resource path="res://assets/fly/0003.png" type="Texture" id=5]
[ext_resource path="res://assets/fly/0007.png" type="Texture" id=6]
[ext_resource path="res://assets/fly/0014.png" type="Texture" id=7]
[ext_resource path="res://assets/fly/0013.png" type="Texture" id=8]
[ext_resource path="res://assets/fly/0012.png" type="Texture" id=9]
[ext_resource path="res://assets/fly/0009.png" type="Texture" id=10]
[ext_resource path="res://assets/fly/0008.png" type="Texture" id=11]
[ext_resource path="res://assets/fly/0016.png" type="Texture" id=12]
[ext_resource path="res://assets/fly/0006.png" type="Texture" id=13]
[ext_resource path="res://assets/fly/0010.png" type="Texture" id=14]
[ext_resource path="res://assets/fly/0000.png" type="Texture" id=15]
[ext_resource path="res://assets/fly/0020.png" type="Texture" id=16]
[ext_resource path="res://assets/fly/0018.png" type="Texture" id=17]
[ext_resource path="res://Scripts/mundo.gd" type="Script" id=18]
[ext_resource path="res://assets/sprites/montanha_fundo.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/montanha.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/nuvens.png" type="Texture" id=21]
[ext_resource path="res://assets/fontes/Arciform.otf" type="DynamicFontData" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "impulse",
"speed": 25.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 6 ) ],
"loop": true,
"name": "fly",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 31.6427

[sub_resource type="DynamicFont" id=3]
size = 25
use_filter = true
font_data = ExtResource( 22 )

[node name="mundo" type="Node2D"]
script = ExtResource( 18 )

[node name="player" type="RigidBody2D" parent="."]
position = Vector2( 60, 350 )
mass = 0.918367
gravity_scale = 6.0
script = ExtResource( 2 )

[node name="anim" type="AnimatedSprite" parent="player"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "fly"
frame = 7
playing = true

[node name="shape" type="CollisionShape2D" parent="player"]
position = Vector2( 7.77817, 4.59619 )
shape = SubResource( 2 )

[node name="cenario" type="Node2D" parent="."]
z_index = -1

[node name="fundo" type="Sprite" parent="cenario"]
texture = ExtResource( 19 )
centered = false

[node name="fundo2" type="Sprite" parent="cenario"]
position = Vector2( 1085, 0 )
texture = ExtResource( 19 )
centered = false

[node name="montanha" type="Sprite" parent="cenario"]
position = Vector2( 0, 50 )
texture = ExtResource( 20 )
centered = false

[node name="montanha2" type="Sprite" parent="cenario"]
position = Vector2( 1085, 50 )
texture = ExtResource( 20 )
centered = false

[node name="nuvem" type="Sprite" parent="cenario"]
texture = ExtResource( 21 )
centered = false

[node name="nuvem2" type="Sprite" parent="cenario"]
position = Vector2( 2160, 0 )
texture = ExtResource( 21 )
centered = false

[node name="pontos" type="Node2D" parent="."]
z_index = 1

[node name="Score" type="Label" parent="pontos"]
margin_right = 450.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.968627, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
text = "0000"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
